--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,16 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+
+/* ---------- General ----------*/
+
+.content-wrapper {
+  width: 90%;
+  margin: 50px 0;
+}
+
+
+
 /* ---------- Base Header - Footer Styles ----------*/
 
 header,
@@ -109,12 +119,23 @@ footer {
   flex-flow: row wrap;
 }
 
+header {
+  padding: 15px 0;
+}
+
 header .content-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   border: 1px solid lightgreen;
   flex-flow: row wrap;
+  margin: 0;
+}
+
+.header-divider {
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
 }
 
 header nav {
@@ -122,13 +143,32 @@ header nav {
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
+  width: 60%;
   border: 1px solid blue;
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
+  width: 100%;
   border: 1px solid blue;
+}
+
+footer {
+  flex-direction: column;
+}
+
+footer p {
+  margin: 0;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+}
+
+footer .contact {
+  margin-bottom: 50px;
 }
 
 footer .social-icons {
@@ -139,8 +179,12 @@ footer .social-icons {
 
 footer .social-icons p {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+}
+
+footer .copyright {
+  margin: 20px 0;
 }
 
 
@@ -151,10 +195,10 @@ footer .social-icons p {
 .hero-area {
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-flow: row wrap;
   border: 1px solid red;
 }
+
 
 
 /* ---------- Main Home (Aside ) ----------*/
@@ -177,6 +221,15 @@ aside {
   border: 1px solid red;
 }
 
+.features h2 {
+  margin-bottom: 60px;  
+}
+
+.features article {
+  width: 63%;
+  margin: 30px 0;
+}
+
 .features .features-items {
   display: flex;
   justify-content: center;
@@ -184,6 +237,12 @@ aside {
   flex-flow: row wrap;
   border: 1px solid lightgreen;
 }
+
+.features p {
+  margin: 0;
+}
+
+
 
 
 /* ---------- Main Home (Reviews Area) ----------*/
@@ -193,6 +252,15 @@ aside {
   justify-content: center;
   flex-flow: row wrap;
   border: 1px solid red;
+}
+
+.reviews h2 {
+  margin-bottom: 40px;
+}
+
+.reviews h3 {
+  width: 55%;
+  margin: 20px 0;
 }
 
 
