--- a/css/main.css
+++ b/css/main.css
@@ -399,9 +399,20 @@ aside {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media screen and (min-width: 768px) {
+  
+  /* Tablet Styles Here */
+
 }
+
+
+@media screen and (min-width: 1200px) {
+
+  /* Desktop Styles Here */
+
+}
+
+
 
 @media print,
   (-webkit-min-device-pixel-ratio: 1.25),
