--- a/css/main.css
+++ b/css/main.css
@@ -399,9 +399,114 @@ aside {
    Modify as content requires.
    ========================================================================== */
 
-@media screen and (min-width: 768px) {
-  
   /* Tablet Styles Here */
+
+@media screen and (min-width: 768px) {
+
+
+  /* General Styles */
+
+  .content-wrapper {
+    max-width: 640px;
+    margin: 100px 0;
+  }
+
+  /* Header Area */
+
+  header {
+    justify-content: space-around;
+    padding: 33px 0;
+  }
+
+  header .content-wrapper {
+    justify-content: space-between;
+    width: 100%;
+    }
+ 
+    header nav {
+        width: 20%;
+    }
+ 
+    header nav ul {
+      justify-content: space-between;
+    }
+ 
+    .header-divider {
+        display: none;
+    }
+ 
+    /* Hero Area */
+ 
+    /* Aside */
+    aside .content-wrapper {
+        margin: 50px 0;
+    }
+
+    aside .content-wrapper {
+      margin: 50px 0;
+      display: flex;
+      justify-content: space-between;
+      flex-flow: row wrap;
+
+    }
+ 
+    aside .content-wrapper .form-description,
+    aside .content-wrapper .form {        
+        width: 40%;x        
+        margin: 0;
+    }
+ 
+    /* Features */
+ 
+    .features article {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-basis: 50%;
+      flex-flow: column wrap;
+    }
+ 
+    }
+ 
+    .features .features-item-description {
+        width: 50%;
+        text-align: center;
+    }
+ 
+    /* Reviews */
+    .reviews article {
+      display: flex;
+      justify-content: space-between;
+    }
+    
+    .reviews article div {
+        width: 50%; 
+    }
+ 
+    /* Footer */
+    footer .content-wrapper {
+        width: 
+        margin: 100px 0;
+    }
+    
+    .footer-content {
+ 
+    }
+ 
+    footer .contact {
+        margin-bottom: 0;
+    }
+ 
+    footer .copyright {
+        width:
+    }
+  
+
+
+
+
+
+
 
 }
 
