Finalized global styles for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -103,53 +103,50 @@ textarea {
 
 
 html {
-  font-size: 16pt;
+  font-size: 16px;
 }
  
 body {
- font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+  font-family: 'Open Sans', sans-serif;
+  text-align: left;
 }
  
 ul, 
 ol {
- 
+  list-style-type: none;
 }
  
 a {
-  
+  color: #e2e3ed;
+  text-decoration: none;
 }
  
 h2 {
- font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.875em;
 }
  
 h3, 
 h4 {
   font-family: 'Poppins', sans-serif;
- 
+  margin: 20px 0;
+  font-size: 1.125em;
 }
  
 p {
+  font-size: .875em;
+  line-height: 1.285;
+}
   
-}
- 
-img {
- 
-}
- 
-figure {
- 
-}
- 
 address {
- 
+ font-style: normal;
 }
-
+ 
 .content-wrapper {
   width: 90%;
   margin: 50px 0;
 }
-
 
 
 /* ---------- Base Header - Footer Styles ----------*/
@@ -193,10 +190,13 @@ header nav {
 
 header nav ul {
   display: flex;
-  justify-content: space-around;
   width: 100%;
   border: 1px solid blue;
 }
+
+
+
+
 
 footer {
   flex-direction: column;
