--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,7 @@ html {
 }
  
 body {
+  color: #e2e3ed;
   font-size: 1em;
   font-family: 'Open Sans', sans-serif;
   text-align: left;
@@ -121,22 +122,37 @@ a {
   color: #e2e3ed;
   text-decoration: none;
 }
+
+h1 {
+  color: #e2e3ed;
+  font-family: 'Poppins', sans-serif;
+  font-weight: normal;
+  font-size: 2.25em;
+  line-height: 1.2em;
+}
  
 h2 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.875em;
+  font-weight: normal;
+  line-height: 1.2;
 }
  
 h3, 
 h4 {
   font-family: 'Poppins', sans-serif;
+  font-weight: 400;
   margin: 20px 0;
   font-size: 1.125em;
+  line-height: 1.2;
 }
  
 p {
+  font-family: 'open-sans', sans-serif;
   font-size: .875em;
+  font-weight: 400;
   line-height: 1.285;
+
 }
   
 address {
@@ -153,6 +169,7 @@ address {
 
 header,
 footer {
+  background-color: #202322;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -199,6 +216,7 @@ header nav ul {
 
 
 footer {
+  color: #fff;
   flex-direction: column;
 }
 
@@ -248,11 +266,38 @@ footer .copyright {
 /* ---------- Main Home (Aside ) ----------*/
 
 aside {
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
   border: 1px solid red;
+}
+
+aside .form {
+  margin-top: 30px;
+}
+ 
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+ 
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 
