--- a/css/main.css
+++ b/css/main.css
@@ -176,7 +176,6 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid red;
   flex-flow: row wrap;
 }
 
@@ -188,12 +187,12 @@ header .content-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid lightgreen;
   flex-flow: row wrap;
   margin: 0;
 }
 
 .header-divider {
+  background-color: #3a3a3a;
   width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
@@ -204,22 +203,21 @@ header nav {
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
+  font-weight: 700;
+  text-transform: uppercase;
   width: 60%;
-  border: 1px solid blue;
+  font-size: 1.125em;
 }
 
 header nav ul {
   display: flex;
   width: 100%;
-  border: 1px solid blue;
+  justify-content: space-around;
 }
-
-
-
-
 
 footer {
   color: #fff;
+  text-align: center;
   flex-direction: column;
 }
 
@@ -228,15 +226,8 @@ footer p {
 }
 
 footer .content-wrapper {
-  display: flex;
-  justify-content: center;
   width: 55%;
   margin: 50px 0;
-}
-
-footer .contact,
-footer .social {
-  text-align: center;
 }
 
 footer .contact {
@@ -251,7 +242,7 @@ footer .social-icons {
 
 footer .social-icons p {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 
