--- a/css/main.css
+++ b/css/main.css
@@ -530,6 +530,17 @@ input[type=button] {
     margin: 100px 0;
   }
 
+  h2 {
+    font-size: 2.25em;
+    line-height: 1.333;
+}
+
+h3 {
+    font-size: 1.5em;
+    line-height: 1.25;
+}
+
+
   /* Header Area */
 
   header {
@@ -541,6 +552,10 @@ input[type=button] {
     justify-content: space-between;
     width: 100%;
     }
+
+     header figure {
+    width: 30%;
+  }
  
     header nav {
         width: 20%;
@@ -553,6 +568,12 @@ input[type=button] {
     .header-divider {
         display: none;
     }
+
+     .hero-area h1 {
+    font-size: 3em;
+    line-height: 1;
+    margin: 0;
+}
  
     /* Hero Area */
  
@@ -595,11 +616,18 @@ input[type=button] {
       justify-content: space-between;
     }
     
+ .reviews h2 {
+    width: 85%;
+  }
+
     .reviews article div {
         width: 49%; 
     }
 
-
+ .reviews h3 {
+    width: 75%;
+    margin: 0;
+}
  
     /* Footer */
    footer .content-wrapper {
@@ -618,6 +646,15 @@ input[type=button] {
         margin-bottom: 0;
 
     }
+
+     footer h4 {
+    font-size: 1.5em;
+    margin-bottom: 40px;
+  }
+
+  footer p {
+      line-height: 1.285;
+  }
  
     footer .copyright {
         width: 100%
@@ -647,6 +684,9 @@ input[type=button] {
       align-items: flex-start;
     }
 
+ .contact-content h4 {
+    font-size: 1.5em;
+  }
 
 
     /* ---------- FAQ ----------*/
@@ -659,9 +699,16 @@ input[type=button] {
       flex-basis: 45%;
     }
 
-    .faq .content-wrapper h2 {
-      width: 100%;
-    }
+     .faq h2 {
+    width: 100%;
+  }
+
+  .faq h4,
+  .faq p {
+      font-size: .875em;
+      line-height: 1.125;
+  }
+
 }
 
 
@@ -669,20 +716,34 @@ input[type=button] {
 
   /* Desktop Styles Here */
 
+ header {
+    padding: 15px 0;
+  }
+
   .content-wrapper {
     max-width: 960px;
   }
 
-
-  /* Hero */
-
-  .hero-area h1 {
-    width: 60%;
+  h2 {
+    font-size: 2.25em;
   }
 
+  h3,
+  h4 {
+      font-size: 1.875em;
+  }
+
+  p {
+      font-size: 1.125em;
+      line-height: 1.333;
+  }
+  /* Hero */
+  .hero-area h1 {
+    font-size: 3.75em;
+    width: 60%;
+}
 
   /* Aside */
-
   aside .content-wrapper {
     justify-content: space-around;
   }
@@ -692,7 +753,11 @@ input[type=button] {
     width: 30%;
   }
 
-  /* Featurs */
+  .form-description p {
+    font-size: 1.125em;
+  }
+
+  /* Features */
 
   .features h2 {
     width: 90%;
@@ -703,23 +768,45 @@ input[type=button] {
   }
   
   /* Reviews */
+
+  .reviews h2 {
+    padding-bottom: 50px; 
+  }
+  
   .reviews article div {
     width: 42%;
   }
 
+  footer h4 {
+    font-size: 1.875em;
+  }
 
-  /* ----------- About ---------- */
+  /* ==========================================================================
+  About Page
+  ========================================================================== */
 
   .mission h2,
   .contact-section .content-wrapper h2 {
-    width: 95%;
+      width: 95%;
+      font-size: 3em;
   }
 
+  .contact-content h4 {
+    font-size: 1.875em;
+  }
 
-  /* ----------- FAQ ---------- */
-
+  /* ==========================================================================
+  FAQ Page
+  ========================================================================== */
   .faq h2 {
     width: 100%;
+    font-size: 3em;
+  }
+    
+  .faq h4,
+  .faq p {
+      font-size: 1.125em;
+      line-height: 1;
   }
 
 
