--- a/css/main.css
+++ b/css/main.css
@@ -381,6 +381,24 @@ input[type=button] {
   flex-flow: row wrap;
 }
 
+/* ---------- Main About (Map Area) ---------- */
+
+.map figure {
+  width: 100%;
+  height: 0;
+  padding-bottom: 80%;
+  overflow: hidden;
+  position: relative;
+}
+
+.map iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+}
 
 
 /* ---------- Main About (Contact Area) ----------*/
