Made map responsive on tablet and desktop css

--- a/css/main.css
+++ b/css/main.css
@@ -700,6 +700,10 @@ h3 {
       width: 45%;
     }
 
+     .map figure {
+    padding-bottom: 45.5%;
+  }
+
     .contact-section .content-wrapper h2 {
       width: 80%;
     }
@@ -814,6 +818,10 @@ h3 {
   /* ==========================================================================
   About Page
   ========================================================================== */
+ 
+ .map figure {
+    padding-bottom: 37.5%;
+  }
 
   .mission h2,
   .contact-section .content-wrapper h2 {
